# Cross-chain-Smart-Contracts

./: .gitignore  README.md
contracts/local/: Cargo.toml  Makefile
contracts/local/schema/: local.json
contracts/local/schema/raw/: execute.json  response_to_account.json  response_to_list_accounts.json
contracts/local/src/: contract.rs  cross_chain.rs  lib.rs
contracts/remote/: Cargo.toml  Makefile
contracts/remote/schema/: remote.json
contracts/remote/src/: contract.rs
