[package]
name = "local"
version = "2.1.0"
authors = [""]
edition = "2021"

exclude = [
    "local.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = []

[dependencies]
cosmwasm-schema = { version = "1.2.5" }
cosmwasm-std = { version = "1.2.5", features = ["iterator", "staking", "stargate"] }
cosmwasm-storage = { version = "1.2.5" }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]

